--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="/">Subscribe</a>
                     </li>
-                    <form class="ms-5 me-3">
+                    <form class="ms-lg-5 me-lg-3 mt-3 mt-lg-0">
                         <a href=""><button class="style-btn btn btn-outline-light border" type="submit">Sign
                                 In</button></a>
                     </form>
